Fixes issue with keyline spacing value in global meta default setting

--- a/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
@@ -7,7 +7,7 @@ $meta--font-size: 14px;
 $meta--font-size-large: 16px;
 $meta--font-family: inherit;
 $meta--line-height: inherit;
-$meta--keyline-spacing: 8px;
+$meta--keyline-spacing: spacing(8);
 $meta--color: #222;
 $meta--margin-bottom: 10px;
 $meta--margin-bottom-large: 20px;
